--- a/src/photos.html
+++ b/src/photos.html
@@ -1,9 +1,5 @@
 {% extends "_base.html" %}
 {% block content %}
-<script src="assets/js/photoswipe.min.js"></script>
-<script src="assets/js/photoswipe-ui-default.min.js"></script>
-<script src="assets/js/colcade.js"></script>
-<script src="assets/js/photos.js"></script>
 <div class="page">
   <!-- <div class="photo-grid">
     </div> -->
@@ -14,8 +10,8 @@
     <div class="grid-col grid-col--3"></div>
     <div class="grid-col grid-col--4"></div>
     {% for item in photos_info %}
-    <a class="grid-item" href="assets/imgs/photos/{{ item.full }}" tabindex="{{ loop.index }}">
-      <img id="{{ item.full }}" src="assets/imgs/photos/{{item.thumb}}" alt="{{ item.thumb }}">
+    <a class="grid-item" href="assets/img/photos/{{ item.full }}" tabindex="{{ loop.index }}" data-photos='{{ item.all_info_json }}''>
+      <img id="{{ item.full }}" src="assets/img/photos/{{ item.thumb }}" alt="{{ item.thumb }}">
     </a>
     {% endfor %}
   </div>
@@ -28,66 +24,73 @@
 <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
 
   <!-- Background of PhotoSwipe.
-         It's a separate element as animating opacity is faster than rgba(). -->
-  <div class="pswp__bg"></div>
+         It' s a separate element as animating opacity is faster than rgba(). -->
+      <div class="pswp__bg"></div>
 
-  <!-- Slides wrapper with overflow:hidden. -->
-  <div class="pswp__scroll-wrap">
+      <!-- Slides wrapper with overflow:hidden. -->
+      <div class="pswp__scroll-wrap">
 
-    <!-- Container that holds slides.
+        <!-- Container that holds slides.
             PhotoSwipe keeps only 3 of them in the DOM to save memory.
             Don't modify these 3 pswp__item elements, data is added later on. -->
-    <div class="pswp__container">
-      <div class="pswp__item"></div>
-      <div class="pswp__item"></div>
-      <div class="pswp__item"></div>
-    </div>
+        <div class="pswp__container">
+          <div class="pswp__item"></div>
+          <div class="pswp__item"></div>
+          <div class="pswp__item"></div>
+        </div>
 
-    <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
-    <div class="pswp__ui pswp__ui--hidden">
+        <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
+        <div class="pswp__ui pswp__ui--hidden">
 
-      <div class="pswp__top-bar">
+          <div class="pswp__top-bar">
 
-        <!--  Controls are self-explanatory. Order can be changed. -->
+            <!--  Controls are self-explanatory. Order can be changed. -->
 
-        <div class="pswp__counter"></div>
+            <div class="pswp__counter"></div>
 
-        <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+            <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
 
-        <!-- <button class="pswp__button pswp__button--share" title="Share"></button> -->
+            <!-- <button class="pswp__button pswp__button--share" title="Share"></button> -->
 
-        <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+            <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
 
-        <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+            <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
 
-        <!-- Preloader demo https://codepen.io/dimsemenov/pen/yyBWoR -->
-        <!-- element will get class pswp__preloader--active when preloader is running -->
-        <div class="pswp__preloader">
-          <div class="pswp__preloader__icn">
-            <div class="pswp__preloader__cut">
-              <div class="pswp__preloader__donut"></div>
+            <!-- Preloader demo https://codepen.io/dimsemenov/pen/yyBWoR -->
+            <!-- element will get class pswp__preloader--active when preloader is running -->
+            <div class="pswp__preloader">
+              <div class="pswp__preloader__icn">
+                <div class="pswp__preloader__cut">
+                  <div class="pswp__preloader__donut"></div>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-      </div>
 
-      <!-- <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+          <!-- <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
           <div class="pswp__share-tooltip"></div>
         </div> -->
 
-      <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
-      </button>
+          <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
+          </button>
 
-      <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
-      </button>
+          <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
+          </button>
 
-      <div class="pswp__caption">
-        <div class="pswp__caption__center"></div>
+          <div class="pswp__caption">
+            <div class="pswp__caption__center"></div>
+          </div>
+
+        </div>
+
       </div>
 
-    </div>
-
   </div>
-
-</div>
-{% endblock content %}
+  <script src="assets/js/photoswipe.js"></script>
+  <script src="assets/js/photoswipe-ui-default.min.js"></script>
+  <script src="assets/js/colcade.min.js"></script>
+  <script src="assets/js/photos.js"></script>
+  <script type="text/javascript">
+    initPhotoSwipe();
+  </script>
+  {% endblock content %}
