photoswipe.js is minned, not colcade.js

--- a/src/photos.html
+++ b/src/photos.html
@@ -86,9 +86,9 @@
       </div>
 
   </div>
-  <script src="assets/js/photoswipe.js"></script>
+  <script src="assets/js/photoswipe.min.js"></script>
   <script src="assets/js/photoswipe-ui-default.min.js"></script>
-  <script src="assets/js/colcade.min.js"></script>
+  <script src="assets/js/colcade.js"></script>
   <script src="assets/js/photos.js"></script>
   <script type="text/javascript">
     initPhotoSwipe();
