--- a/src/photos.html
+++ b/src/photos.html
@@ -1,21 +1,20 @@
 {% extends "_base.html" %}
 {% block content %}
 <div class="page">
-  <!-- <div class="photo-grid">
-    </div> -->
-  <div class="grid" data-colcade="columns: .grid-col, items: .grid-item">
-    <!-- columns -->
-    <div class="grid-col grid-col--1"></div>
-    <div class="grid-col grid-col--2"></div>
-    <div class="grid-col grid-col--3"></div>
-    <div class="grid-col grid-col--4"></div>
-    {% for item in photos_info %}
-    <a class="grid-item" href="assets/img/photos/{{ item.full }}" tabindex="{{ loop.index }}" data-photos='{{ item.all_info_json }}''>
-      <img id="{{ item.full }}" src="assets/img/photos/{{ item.thumb }}" alt="{{ item.thumb }}">
-    </a>
-    {% endfor %}
+  <div class="photo-grid">
+    <div class="grid" data-colcade="columns: .grid-col, items: .grid-item">
+      <!-- columns -->
+      <div class="grid-col grid-col--1"></div>
+      <div class="grid-col grid-col--2"></div>
+      <div class="grid-col grid-col--3"></div>
+      <div class="grid-col grid-col--4"></div>
+      {% for item in photos_info %}
+      <a class="grid-item" href="assets/img/photos/{{ item.full }}" tabindex="{{ loop.index }}" data-photos='{{ item.all_info_json }}''>
+        <img id="{{ item.full }}" src="assets/img/photos/{{ item.thumb }}" alt="{{ item.thumb }}">
+      </a>
+      {% endfor %}
+    </div>
   </div>
-  <div class="fade"></div>
 </div>
 
 
