--- a/src/photos.html
+++ b/src/photos.html
@@ -11,6 +11,7 @@
       {% for item in photos_info %}
       <a class="grid-item" href="assets/img/photos/{{ item.full }}" tabindex="{{ loop.index }}" data-photos='{{ item.all_info_json }}''>
         <img id="{{ item.full }}" src="assets/img/photos/{{ item.thumb }}" alt="{{ item.thumb }}">
+        <h3>{{item.title}}</h3>
       </a>
       {% endfor %}
     </div>
