add guttered- prefix to outer photo grid.
The outer class is needed to add the side gutters, but it was confusing 
why there were two nested photo grids.

--- a/src/photos.html
+++ b/src/photos.html
@@ -1,7 +1,7 @@
 {% extends "_base.html" %}
 {% block content %}
 <div class="page">
-  <div class="photo-grid">
+  <div class="guttered-photo-grid">
     <div class="grid" data-colcade="columns: .grid-col, items: .grid-item">
       <!-- columns -->
       <div class="grid-col grid-col--1"></div>
