Move photo css from _base.html to photos.html

--- a/src/photos.html
+++ b/src/photos.html
@@ -1,5 +1,8 @@
 {% extends "_base.html" %}
 {% block content %}
+<link rel="stylesheet" href="assets/css/photoswipe.css">
+<link rel="stylesheet" href="assets/css/photos.css">
+<link rel="stylesheet" href="assets/css/default-skin/default-skin.css">
 <div class="page">
   <div class="guttered-photo-grid">
     <div class="grid" data-colcade="columns: .grid-col, items: .grid-item">
