--- a/src/photos.html
+++ b/src/photos.html
@@ -4,20 +4,21 @@
 <link rel="stylesheet" href="assets/css/photos.css">
 <link rel="stylesheet" href="assets/css/default-skin/default-skin.css">
 <div class="page">
-  <div class="guttered-photo-grid">
-    <div class="grid" data-colcade="columns: .grid-col, items: .grid-item">
-      <!-- columns -->
+  <div class="grid" data-colcade="columns: .grid-col, items: .grid-item">
+    <!-- columns -->
+    <div class="grid-col-container">
       <div class="grid-col grid-col--1"></div>
       <div class="grid-col grid-col--2"></div>
       <div class="grid-col grid-col--3"></div>
       <div class="grid-col grid-col--4"></div>
-      {% for item in photos_info %}
-      <a class="grid-item" href="assets/img/photos/{{ item.full }}" tabindex="{{ loop.index }}" data-photos='{{ item.all_info_json }}'>
-        <img id="{{ item.full }}" src="assets/img/photos/{{ item.thumb }}" alt="{{ item.thumb }}">
-        <h3>{{item.title}}</h3>
-      </a>
-      {% endfor %}
     </div>
+    {% for item in photos_info %}
+    <a class="grid-item" href="assets/img/photos/{{ item.full }}" tabindex="{{ loop.index }}" data-photos='{{ item.all_info_json }}'>
+      <div class="photo-placeholder {{loop.index}}" style="padding-bottom: {{ item.aspect_ratio }}%;"></div>
+      <img id="{{ item.full }}" src="assets/img/photos/{{ item.thumb }}" alt="{{ item.thumb }}">
+      <h3>{{loop.index}}</h3>
+    </a>
+    {% endfor %}
   </div>
 </div>
 
