--- a/src/_base.html
+++ b/src/_base.html
@@ -29,7 +29,7 @@
     <ul>
       <li><a class="nav-bar-item title" href="/">NickCrews.com</a></li>
       <li><a class="nav-bar-item" href="/photos">Photos</a></li>
-      <li><a class="nav-bar-item" href="/">Projects</a></li>
+      <li><a class="nav-bar-item" href="/projects">Projects</a></li>
       <li><a class="nav-bar-item" href="/">Contact</a></li>
     </ul>
   </header>
