--- a/src/projects.html
+++ b/src/projects.html
@@ -1,10 +1,19 @@
 {% extends "_base.html" %}
 {% block content %}
+<link rel="stylesheet" href="assets/css/projects.css">
 <div class="page">
   {% for proj in project_info %}
-  <a href="{{ proj.homepage }}">
-    <h3>{{proj.name}}</h3>
-  </a>
+  <div class="proj-card">
+    <img class="proj-thumbnail" src="{{ proj.image }}" alt="{{ proj.title }}">
+    <div class="proj-info">
+      <a href="{{ proj.homepage }}">
+        <h3>{{proj.title}}</h3>
+      </a>
+      <div class="proj-summary">
+        {{ proj.summary }}
+      </div>
+    </div>
+  </div>
   {% endfor %}
 </div>
 {% endblock content %}
